# monorepo-bazel

./: .gitignore  MODULE.bazel  Makefile  README.md
.infrastructure/scripts/setup/bazel/: install.sh  uninstall.sh
.infrastructure/scripts/setup/buildifier/: install.sh  uninstall.sh
apps/agent/: BUILD
apps/agent/src/: main.py
apps/main/: BUILD  README.md  requirements.txt
apps/main/src/: main.py
apps/scraper/: BUILD
apps/scraper/src/: main.py
docs/buildifier/: BUILDIFIER_INSTALATION_AND_SETUP.md
libs/shared/: BUILD
libs/shared/src/: helpers.py
