module(name = "my_monorepo")

bazel_dep(name = "rules_python", version = "1.0.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

python.toolchain(python_version = "3.10")  # agent
python.toolchain(python_version = "3.12")  # scraper
python.toolchain(python_version = "3.13")  # main

use_repo(python, python_3_10 = "python_3_10")
use_repo(python, python_3_12 = "python_3_12")
use_repo(python, python_3_13 = "python_3_13")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

# Agent deps
pip.parse(
    hub_name = "agent_deps",
    python_version = "3.10",
    requirements_lock = "//apps/agent:requirements_lock.txt",
)
use_repo(pip, "agent_deps")

# Main deps
pip.parse(
    hub_name = "main_deps",
    python_version = "3.13",
    requirements_lock = "//apps/main:requirements_lock.txt",
)
use_repo(pip, "main_deps")

# Web scraper deps
pip.parse(
    hub_name = "scraper_deps",
    python_version = "3.12",
    requirements_lock = "//apps/scraper:requirements_lock.txt",
)
use_repo(pip, "scraper_deps")

# Shared libs deps
pip.parse(
    hub_name = "shared_libs_deps",
    python_version = "3.12",
    requirements_lock = "//libs/shared:requirements_lock.txt",
)
use_repo(pip, "shared_libs_deps")
